--- a/src/infrastructure/Infrastructure.Tool/Infrastructure.Tool.csproj
+++ b/src/infrastructure/Infrastructure.Tool/Infrastructure.Tool.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="NRedisStack" Version="0.8.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
