--- a/src/hosts/Host.Windows/Host.BackServer.csproj
+++ b/src/hosts/Host.Windows/Host.BackServer.csproj
@@ -9,8 +9,11 @@
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
 		<PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="7.0.1" />
+		<PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
 		<PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.18-beta">
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		  <PrivateAssets>all</PrivateAssets>
 		</PackageReference>
+		<PackageReference Include="System.Security.AccessControl" Version="6.0.0" />
 	</ItemGroup>
 </Project>
