--- a/src/hosts/Host.Windows/Host.Window.csproj
+++ b/src/hosts/Host.Windows/Host.Window.csproj
@@ -5,6 +5,7 @@
 		<OutputType>WinExe</OutputType>
 		<TargetFramework>net6.0-windows</TargetFramework>
 		<Nullable>enable</Nullable>
+		<NoWin32Manifest>true</NoWin32Manifest>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
