--- a/src/infrastructure/Infrastructure.Core/Infrastructure.Core.csproj
+++ b/src/infrastructure/Infrastructure.Core/Infrastructure.Core.csproj
@@ -5,6 +5,12 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <Compile Remove="Middlewares\**" />
+	  <EmbeddedResource Remove="Middlewares\**" />
+	  <None Remove="Middlewares\**" />
+	</ItemGroup>
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
@@ -14,8 +20,5 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
-	</ItemGroup>
-	<ItemGroup>
-	  <Folder Include="Middlewares\" />
 	</ItemGroup>
 </Project>
