--- a/src/hosts/Host.Shared/Configs/appconfig.json
+++ b/src/hosts/Host.Shared/Configs/appconfig.json
@@ -1,105 +1,105 @@
 {
-  //应用程序类型Controllers ControllersWithViews MVC
-  "appType": "Controllers",
-  //Api地址
-  "urls": [ "http://*:8000" ],
-  //跨域地址
-  "corUrls": [],
-  //程序集名称
-  "assemblyNames": [ "Service.Admin" ],
-  //分布式事务唯一标识admin，为空则不生成分布式事务表
-  "distributeKey": "",
-  //验证
-  "validate": {
-    //登录
-    "login": true,
-    //接口权限
-    "permission": true,
-    //数据权限
-    "dataPermission": true
-  },
-  //Swagger文档
-  "swagger": {
-    //启用
-    "enable": true,
-    //启用枚举架构过滤器
-    "enableEnumSchemaFilter": true,
-    //启用接口排序文档过滤器
-    "enableOrderTagsDocumentFilter": true,
-    //启用枚举属性名
-    "enableJsonStringEnumConverter": false,
-    //启用SchemaId命名空间
-    "enableSchemaIdNamespace": false,
-    //程序集列表，用于启用SchemaId命名空间
-    "assemblyNameList": [],
-    //路由前缀，如配置微服务文档地址：doc/module/swagger
-    "routePrefix": "admin/swagger",
-    //地址
-    "url": "http://localhost:8000",
-    "projects": [
-      {
-        "name": "中台Admin",
-        "code": "admin",
-        "version": "v3.7.0",
-        "description": ""
-      },
-      {
-        "name": "中台Web",
-        "code": "web",
-        "version": "v3.7.0",
-        "description": ""
-      }
-    ]
-  },
-  //ZhonTai接口文档
-  "apiUI": {
-    //启用
-    "enable": true,
-    //路由前缀，如配置微服务文档地址：doc/module
-    "routePrefix": "admin",
-    //页脚
-    "footer": {
-      "enable": false,
-      "content": "Copyright<a-icon type=\"copyright\" /> 2022-<a target=\"_blank\" href=\"https://www.zhontai.net\">中台Admin</a>"
+    //应用程序类型Controllers ControllersWithViews MVC
+    "appType": "Controllers",
+    //Api地址
+    "urls": [ "http://*:8000" ],
+    //跨域地址
+    "corUrls": [],
+    //程序集名称
+    "assemblyNames": [ "Service.Admin", "Repository.Admin" ],
+    //分布式事务唯一标识admin，为空则不生成分布式事务表
+    "distributeKey": "",
+    //验证
+    "validate": {
+        //登录
+        "login": true,
+        //接口权限
+        "permission": true,
+        //数据权限
+        "dataPermission": true
+    },
+    //Swagger文档
+    "swagger": {
+        //启用
+        "enable": true,
+        //启用枚举架构过滤器
+        "enableEnumSchemaFilter": true,
+        //启用接口排序文档过滤器
+        "enableOrderTagsDocumentFilter": true,
+        //启用枚举属性名
+        "enableJsonStringEnumConverter": false,
+        //启用SchemaId命名空间
+        "enableSchemaIdNamespace": false,
+        //程序集列表，用于启用SchemaId命名空间
+        "assemblyNameList": [],
+        //路由前缀，如配置微服务文档地址：doc/module/swagger
+        "routePrefix": "admin/swagger",
+        //地址
+        "url": "http://localhost:8000",
+        "projects": [
+            {
+                "name": "中台Admin",
+                "code": "admin",
+                "version": "v3.7.0",
+                "description": ""
+            },
+            {
+                "name": "中台Web",
+                "code": "web",
+                "version": "v3.7.0",
+                "description": ""
+            }
+        ]
+    },
+    //ZhonTai接口文档
+    "apiUI": {
+        //启用
+        "enable": true,
+        //路由前缀，如配置微服务文档地址：doc/module
+        "routePrefix": "admin",
+        //页脚
+        "footer": {
+            "enable": false,
+            "content": "Copyright<a-icon type=\"copyright\" /> 2022-<a target=\"_blank\" href=\"https://www.zhontai.net\">中台Admin</a>"
+        }
+    },
+    //MiniProfiler性能分析器
+    "miniProfiler": false,
+    //面向切面编程
+    "aop": {
+        //事务
+        "transaction": true
+    },
+    //数据库日志
+    "log": {
+        //操作日志
+        "operation": true
+    },
+    //限流
+    "rateLimit": false,
+    //验证码
+    "varifyCode": {
+        //启用
+        "enable": true,
+        //字体列表
+        "fonts": [ "Times New Roman", "Verdana", "Arial", "Gungsuh", "Impact" ]
+    },
+    //默认密码
+    "defaultPassword": "111111",
+    //动态api
+    "dynamicApi": {
+        //结果格式化
+        "formatResult": true
+    },
+    //实现标准标识密码哈希，启用后相同密码加密后各不相同
+    "passwordHasher": false,
+    //最大请求大小
+    "maxRequestBodySize": 104857600,
+    //健康检查
+    "healthChecks": {
+        //启用
+        "enable": true,
+        //访问路径
+        "path": "/admin/health"
     }
-  },
-  //MiniProfiler性能分析器
-  "miniProfiler": false,
-  //面向切面编程
-  "aop": {
-    //事务
-    "transaction": true
-  },
-  //数据库日志
-  "log": {
-    //操作日志
-    "operation": true
-  },
-  //限流
-  "rateLimit": false,
-  //验证码
-  "varifyCode": {
-    //启用
-    "enable": true,
-    //字体列表
-    "fonts": [ "Times New Roman", "Verdana", "Arial", "Gungsuh", "Impact" ]
-  },
-  //默认密码
-  "defaultPassword": "111111",
-  //动态api
-  "dynamicApi": {
-    //结果格式化
-    "formatResult": true
-  },
-  //实现标准标识密码哈希，启用后相同密码加密后各不相同
-  "passwordHasher": false,
-  //最大请求大小
-  "maxRequestBodySize": 104857600,
-  //健康检查
-  "healthChecks": {
-    //启用
-    "enable": true,
-    //访问路径
-    "path": "/admin/health"
-  }
 }
