--- a/src/infrastructure/Infrastructure.Core/Infrastructure.Core.csproj
+++ b/src/infrastructure/Infrastructure.Core/Infrastructure.Core.csproj
@@ -15,6 +15,7 @@
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
 	<ItemGroup>
+		<PackageReference Include="FreeSql.Repository" Version="3.2.800" />
 		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.10" />
 		<PackageReference Include="NRedisStack" Version="0.8.0" />
