--- a/web/vueapp/package.json
+++ b/web/vueapp/package.json
@@ -18,8 +18,8 @@
     "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "^1.5.0",
     "countup.js": "^2.8.0",
-    "cropperjs": "^1.6.0",
-    "dayjs": "^1.11.9",
+    "cropperjs": "^1.6.1",
+    "dayjs": "^1.11.10",
     "echarts": "^5.4.3",
     "echarts-gl": "^2.0.9",
     "echarts-wordcloud": "^2.1.0",
@@ -39,24 +39,24 @@
     "splitpanes": "^3.1.5",
     "vue": "^3.3.4",
     "vue-clipboard3": "^2.0.0",
-    "vue-demi": "^0.14.5",
-    "vue-grid-layout": "^3.0.0-beta1",
-    "vue-i18n": "^9.2.2",
-    "vue-router": "^4.2.4"
+    "vue-demi": "^0.14.6",
+    "vue-grid-layout": "3.0.0-beta1",
+    "vue-i18n": "^9.4.1",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@types/node": "^20.5.7",
-    "@types/nprogress": "^0.2.0",
-    "@types/sortablejs": "^1.15.1",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
-    "@vitejs/plugin-vue": "^4.3.3",
+    "@types/node": "^20.7.0",
+    "@types/nprogress": "^0.2.1",
+    "@types/sortablejs": "^1.15.3",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "@vitejs/plugin-vue": "^4.3.4",
     "@vue/compiler-sfc": "^3.3.4",
     "dotenv": "16.3.1",
-    "eslint": "^8.48.0",
+    "eslint": "^8.50.0",
     "eslint-plugin-vue": "^9.17.0",
-    "prettier": "^3.0.2",
-    "sass": "^1.66.1",
+    "prettier": "^3.0.3",
+    "sass": "^1.68.0",
     "swagger-typescript-api": "13.0.3",
     "typescript": "^5.2.2",
     "vite": "^4.4.9",
