--- a/src/infrastructure/Infrastructure.Core/Infrastructure.Core.csproj
+++ b/src/infrastructure/Infrastructure.Core/Infrastructure.Core.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFrameworks>net6.0;net8.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
@@ -15,10 +15,10 @@
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="FreeSql.Repository" Version="3.2.801" />
-		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="7.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.11" />
-		<PackageReference Include="NRedisStack" Version="0.9.0" />
+		<PackageReference Include="FreeSql.Repository" Version="3.2.808" />
+		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.0" />
+		<PackageReference Include="NRedisStack" Version="0.11.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Autofac" Version="7.1.0" />
