--- a/src/repository/Repository.Admin/Repository.Admin.csproj
+++ b/src/repository/Repository.Admin/Repository.Admin.csproj
@@ -1,17 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFrameworks>net6.0;net8.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Autofac" Version="7.1.0" />
-		<PackageReference Include="FreeSql" Version="3.2.801" />
-		<PackageReference Include="FreeSql.Provider.Sqlite" Version="3.2.801" />
-		<PackageReference Include="FreeSql.Repository" Version="3.2.801" />
-		<PackageReference Include="Mapster" Version="7.3.0" />
-		<PackageReference Include="Microsoft.Extensions.DependencyModel" Version="7.0.0" />
+		<PackageReference Include="FreeSql" Version="3.2.808" />
+		<PackageReference Include="FreeSql.Provider.Sqlite" Version="3.2.808" />
+		<PackageReference Include="FreeSql.Repository" Version="3.2.808" />
+		<PackageReference Include="Mapster" Version="7.4.0" />
+		<PackageReference Include="System.Text.Json" Version="8.0.0" />
 		<PackageReference Include="Yitter.IdGenerator" Version="1.0.14" />
 	</ItemGroup>
 	<ItemGroup>
