--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "framework"]
 	path = framework
 	url = https://github.com/lytree/FrameworkLib.git
+[submodule "plugins"]
+	path = plugins
+	url = https://github.com/lytree/Admin.Plugins.git
+[submodule "client"]
+	path = client
+	url = https://github.com/lytree/Admin.Client.git
