--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,9 @@
 	path = framework
 	url = https://github.com/lytree/FrameworkLib.git
 
+[submodule "plugins"]
+	path = plugins
+	url = https://github.com/lytree/Admin.Plugins
+[submodule "clients"]
+	path = clients
+	url = https://github.com/lytree/Admin.Client.git
